Fix : arial and contrast problems

--- a/src/litopia-base.scss
+++ b/src/litopia-base.scss
@@ -64,7 +64,7 @@
 
   p.darkerText {
     font-weight: 300;
-    color: rgba($text-color,0.5);
+    color: rgba($text-color,0.75);
   }
 
   .card-container{
